# dspace-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
crates/aruna_connector/: Cargo.toml  README.md
crates/aruna_connector/src/: main.rs
crates/aruna_connector/src/api/: catalog.rs  contract_definition.rs  contract_negotiation.rs  contract_negotiation_provider.rs
crates/aruna_connector/src/dsp/: ld_properties_and_type_names.rs  negotiation_properties_and_type_names.rs
crates/dsp_api/: Cargo.toml  README.md
crates/dsp_api/src/: contract_request_message.rs  lib.rs
crates/dsp_api/src/catalog/: README.md  catalog.rs  catalog_error.rs  catalog_request_message.rs  dataset.rs  dataset_request_message.rs
crates/dsp_api/src/common/: dsp_version.rs  dspace_version.rs
crates/dsp_api/src/contract_negotiation/: README.md  contract.rs  contract_agreement_message.rs  contract_agreement_verification_message.rs  contract_negotiation.rs  contract_negotiation_error.rs  contract_negotiation_event_message.rs  contract_negotiation_termination_message.rs  contract_offer_message.rs  contract_request_message.rs
crates/dsp_api/src/transfer_process/: README.md  transfer_completion_message.rs  transfer_error.rs  transfer_process.rs  transfer_request_message.rs  transfer_start_message.rs  transfer_suspension_message.rs  transfer_termination_message.rs
crates/dsp_client/: Cargo.toml
crates/dsp_client/src/: configuration.rs  lib.rs  main.rs  utils.rs
crates/dsp_client/src/catalog/: catalog_api.rs
crates/dsp_client/src/common/: dspace_version.rs
crates/dsp_client/src/contract_negotiation/: negotiation_consumer_api.rs  negotiation_provider_api.rs
crates/dsp_client/src/transfer_process/: transfer_consumer_api.rs  transfer_provider_api.rs
crates/edc_api/: Cargo.toml  README.md
crates/edc_api/src/: api_error_detail.rs  asset_input.rs  asset_output.rs  callback_address.rs  catalog_request.rs  contract_agreement.rs  contract_definition_input.rs  contract_definition_output.rs  contract_negotiation.rs  contract_offer_description.rs  contract_request.rs  criterion.rs  data_address.rs  dataplane_instance_schema.rs  dataset_request.rs  deprovisioned_resource.rs  endpoint_data_reference_entry.rs  failure.rs  health_check_result.rs  health_status.rs  id_response.rs  json_array.rs  json_object.rs  json_value.rs  json_value_type.rs  lib.rs  negotiation_state.rs  offer.rs  policy_definition_input.rs  policy_definition_output.rs  provisioner_webhook_request.rs  query_spec.rs  secret_input.rs  secret_output.rs  selection_request_schema.rs  suspend_transfer.rs  terminate_negotiation_schema.rs  terminate_transfer.rs  transfer_process.rs  transfer_request.rs  (+1 more)
crates/edc_client/: Cargo.toml  README.md
crates/edc_client/src/: application_observability_api.rs  asset_api.rs  catalog_api.rs  configuration.rs  contract_agreement_api.rs  contract_definition_api.rs  contract_negotiation_api.rs  dataplane_selector_api.rs  edr_cache_api.rs  http_provisioner_webhook_api.rs  lib.rs  policy_definition_api.rs  secret_api.rs  transfer_process_api.rs  utils.rs
crates/edc_server/: Cargo.toml
crates/odrl/: Cargo.toml  README.md
crates/odrl/src/: edc_connector.rs  lib.rs  main.rs  name_spaces.rs
crates/odrl/src/functions/: json_ld_serializer.rs  json_parser.rs  json_serializer.rs  serializer.rs  state_machine.rs  validator.rs  vocabulary.rs
crates/odrl/src/model/: action.rs  asset.rs  conflict_term.rs  constraint.rs  mod.rs  party.rs  policy.rs  rule.rs  type_alias.rs
docs/edc_api/: ApiErrorDetail.md  AssetInput.md  AssetOutput.md  CallbackAddress.md  CatalogRequest.md  ContractAgreement.md  ContractDefinitionInput.md  ContractDefinitionOutput.md  ContractNegotiation.md  ContractOfferDescription.md  ContractRequest.md  Criterion.md  DataAddress.md  DataPlaneInstanceSchema.md  DatasetRequest.md  DeprovisionedResource.md  EndpointDataReferenceEntry.md  Failure.md  HealthCheckResult.md  HealthStatus.md  IdResponse.md  JsonArray.md  JsonObject.md  JsonValue.md  NegotiationState.md  Offer.md  PolicyDefinitionInput.md  PolicyDefinitionOutput.md  ProvisionerWebhookRequest.md  QuerySpec.md  SecretInput.md  SecretOutput.md  SelectionRequestSchema.md  SuspendTransfer.md  TerminateNegotiationSchema.md  TerminateTransfer.md  TransferProcess.md  TransferRequest.md  TransferState.md
docs/edc_client/: ApplicationObservabilityApi.md  AssetApi.md  CatalogApi.md  ContractAgreementApi.md  ContractDefinitionApi.md  ContractNegotiationApi.md  DataplaneSelectorApi.md  EDRCacheApi.md  HttpProvisionerWebhookApi.md  PolicyDefinitionApi.md  SecretApi.md  TransferProcessApi.md
test_utils/: docker-compose.yml
test_utils/conf/consumer-connector.config/: addresses.json  configuration.properties
test_utils/conf/provider-connector.config/: addresses.json  configuration.properties
test_utils/connector/: Dockerfile  build.gradle.kts
test_utils/connector/gradle/: libs.versions.toml
test_utils/connector/src/main/java/org/testing/edc/: VaultSeedExtension.java
tests/: Cargo.toml
tests/aruna_connector/: catalog_api_test.rs  negotiation_provider_api_test.rs
tests/aruna_connector/common/: mod.rs
tests/dsp_client/: catalog_api_test.rs  common_dspace_version_api_test.rs  contract_negotiation_provider_api_test.rs
tests/dsp_client/common/: mod.rs
tests/edc_client/: asset_api_test.rs  catalog_api_test.rs  contract_agreement_api_test.rs  contract_definition_api_test.rs  contract_negotiation_api_test.rs  dataplane_selector_api_test.rs  edr_cache_api_test.rs  policy_definition_api_test.rs  transfer_process_api_test.rs
tests/edc_client/common/: mod.rs
tests/odrl/: json_parser_test.rs  json_serializer_test.rs
