[package]
name = "dspace-rs_tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dev-dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "^1.0"
url = "2.5.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.7.0", features = ["v4"] }
sophia = "0.8.0"
sophia_jsonld = "0.8.0"
sophia_term = "0.8.0"
rust-fsm = "0.6.1"
chrono = "0.4.37"
edc_api = { path = "../crates/edc_api" }
edc_client = { path = "../crates/edc_client" }
edc_server = { path = "../crates/edc_server" }
odrl = { path = "../crates/odrl" }
dsp_api = { path = "../crates/dsp_api" }
dsp_client = { path = "../crates/dsp_client" }
[dependencies.reqwest]
version = "^0.12.5"
features = ["json", "multipart"]

[[test]]
name = "edc_api_test"
path = "edc_api/edc_api_test.rs"

[[test]]
name = "odrl_json_parser_test"
path = "odrl/json_parser_test.rs"

[[test]]
name = "odrl_json_serializer_test"
path = "odrl/json_serializer_test.rs"

[[test]]
name = "asset_api_test"
path = "edc_client/asset_api_test.rs"

[[test]]
name = "catalog_api_test"
path = "edc_client/catalog_api_test.rs"

[[test]]
name = "contract_agreement_api_test"
path = "edc_client/contract_agreement_api_test.rs"

[[test]]
name = "contract_definition_api_test"
path = "edc_client/contract_definition_api_test.rs"

[[test]]
name = "contract_negotiation_api_test"
path = "edc_client/contract_negotiation_api_test.rs"

[[test]]
name = "dataplane_selector_api_test"
path = "edc_client/dataplane_selector_api_test.rs"

[[test]]

name = "edr_cache_api_test"
path = "edc_client/edr_cache_api_test.rs"

[[test]]
name = "policy_definition_api_test"
path = "edc_client/policy_definition_api_test.rs"

[[test]]
name = "transfer_process_api_test"
path = "edc_client/transfer_process_api_test.rs"

[[test]]
name = "dspace_version_api_test"
path = "dsp_client/common_dspace_version_api_test.rs"