[package]
name = "aruna_connector"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
path = "./src/main.rs"
crate-type = ["bin"]

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
tracing-subscriber = "0.3.18"
edc_api = { path = "../edc_api" }
serde_json = "1.0.120"
tracing = "0.1.40"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }