[package]
name = "dsp_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
path = "./src/lib.rs"
crate-type = ["lib"]

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "^1.0"
url = "2.5.0"
serde_with = "3.9.0"