[package]
name = "dsp_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"
crate-type = ["lib"]

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "^1.0"
url = "2.5.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
edc_api = { path = "../edc_api" }
[dependencies.reqwest]
version = "^0.12.5"
features = ["json", "multipart"]